# RvsDecompiled

./: .gitignore  AGENTS.md  AUDIT_INDEX_README.txt  CMakeLists.txt  DECOMPILATION_PLAN.md  DIVERGENCE_ISSUES_DETAIL.txt  ENGINE_DOCUMENTATION_PLAN.md  ENGINE_FUNCTIONS_FULL_EXPORT.txt  ENGINE_MODERNISATION_PLAN.md  EngineStubs.i  FUNCTION_COMPARISON_RESULTS.txt  FUNCTION_FIXES_GUIDE.txt  GHIDRA_EXPORTS_SUMMARY.txt  IMPLEMENTATION_ROADMAP.txt  NATIVE_ORDINALS.md  QUICK_REFERENCE.txt  README.md  STUBS_PLAN.md  STUB_AUDIT.md  STUB_AUDIT_COMPLETE.txt  STUB_AUDIT_DETAILED.csv  STUB_AUDIT_REPORT.txt  STUB_AUDIT_SUMMARY.csv  STUB_PLAN.md  analyze_stubs.ps1  check_fun.ps1  configure-msvc71.bat  do_impl_convert.py  do_insert.py  extracted_functions.txt  ghidra_funcs.txt  insert_macros.py  phase1stubplan.md  stub_audit.py  update_diverge.py
src/Core/: CMakeLists.txt
src/Core/Classes/: Commandlet.uc  HelloWorldCommandlet.uc  Locale.uc  Object.uc  SimpleCommandlet.uc  Subsystem.uc  Time.uc
src/Core/Inc/: Core.h  CorePrivate.h  FCodec.h  FMallocAnsi.h  FMallocWindows.h  ImplSource.h  UFactory.h  UnArc.h  UnBits.h  UnCache.h  UnClass.h  UnCorObj.h  UnFile.h  UnLinker.h  UnMath.h  UnObjBas.h  UnObjVer.h  UnPrim.h  UnStack.h  UnTemplate.h  UnType v1.h  UnType.h  UnVcWin32.h
src/Core/Src/: Core.cpp  Core.def  CoreAutoParity.parity  CoreStubs.cpp  UnArc.cpp  UnBits.cpp  UnCache.cpp  UnClass.cpp  UnCorObj.cpp  UnExport.cpp  UnFile.cpp  UnLinker.cpp  UnLog.cpp  UnMath.cpp  UnMem.cpp  UnName.cpp  UnNet.cpp  UnObj.cpp  UnProp.cpp  UnRange.cpp  UnScript.cpp  UnStream.cpp
src/Engine/: CMakeLists.txt
src/Engine/Classes/: AIController.uc  AIMarker.uc  AIScript.uc  AccessControl.uc  ActionMoveActor.uc  ActionMoveCamera.uc  ActionPause.uc  Actor.uc  ActorManager.uc  Admin.uc  AmbientSound.uc  AnimNotify.uc  AnimNotify_DestroyEffect.uc  AnimNotify_Effect.uc  AnimNotify_MatSubAction.uc  AnimNotify_Script.uc  AnimNotify_Scripted.uc  AnimNotify_Sound.uc  AnimNotify_Trigger.uc  AntiPortalActor.uc  BeamEmitter.uc  Bitmap.uc  BitmapMaterial.uc  BlockingVolume.uc  BroadcastHandler.uc  Brush.uc  Camera.uc  CameraEffect.uc  CameraOverlay.uc  Canvas.uc  CheatManager.uc  ClipMarker.uc  ColorModifier.uc  Combiner.uc  Console.uc  ConstantColor.uc  ConstantMaterial.uc  Controller.uc  Crushed.uc  Cubemap.uc  (+178 more)
src/Engine/Inc/: Core.h  Engine.h  Engine.i  EngineClasses.h  EngineDecls.h  EnginePrivate.h  UnURL.h
src/Engine/Src/: Engine.cpp  EngineAutoParity.parity  EngineAux.cpp  EngineClassImpl.cpp  EngineEvents.cpp  EngineLinkerShims.cpp  EngineStubs.cpp  KarmaSupport.cpp  NullDrv.cpp  R6EngineIntegration.cpp  UnAI.cpp  UnActCol.cpp  UnActor.cpp  UnAudio.cpp  UnBuildTools.cpp  UnCamera.cpp  UnCanvas.cpp  UnChan.cpp  UnConn.cpp  UnDoor.cpp  UnDownload.cpp  UnEffects.cpp  UnEmitter.cpp  UnFPoly.cpp  UnFluidSurface.cpp  UnFont.cpp  UnGame.cpp  UnHUD.cpp  UnIn.cpp  UnInterpolation.cpp  UnLevAct.cpp  UnLevel.cpp  UnMaterial.cpp  UnMesh.cpp  UnMeshInstance.cpp  UnModel.cpp  UnMover.cpp  UnNavigation.cpp  UnNet.cpp  UnNetDrv.cpp  (+16 more)
src/IpDrv/: CMakeLists.txt
src/IpDrv/Classes/: ClientBeaconReceiver.uc  InternetLink.uc  TcpLink.uc  UdpBeacon.uc  UdpLink.uc
src/IpDrv/Inc/: IpDrvClasses.h  IpDrvPrivate.h
src/IpDrv/Src/: IpDrv.cpp  IpDrvAutoParity.parity
src/Launch/: CMakeLists.txt
src/Launch/Inc/: FMallocWindows.h  LaunchPrivate.h
src/Launch/Src/: Launch.cpp  LaunchGlobals.cpp
src/MeSDK/: CMakeLists.txt
src/MeSDK/Inc/: MeTypes.h
src/MeSDK/Src/: McdModel.cpp  MdtBody.cpp  MdtContact.cpp  MeWorld.cpp
src/R6Abstract/: CMakeLists.txt
src/R6Abstract/Classes/: R6AbstractBullet.uc  R6AbstractBulletManager.uc  R6AbstractCorpse.uc  R6AbstractEviLPatchService.uc  R6AbstractExtractionZone.uc  R6AbstractFirstPersonWeapon.uc  R6AbstractGadget.uc  R6AbstractGameInfo.uc  R6AbstractGameService.uc  R6AbstractHUD.uc  R6AbstractHelmet.uc  R6AbstractInsertionZone.uc  R6AbstractNoiseMgr.uc  R6AbstractPawn.uc  R6AbstractWeapon.uc  R6InteractiveObjectAbstract.uc  R6MissionObjectiveMgr.uc
src/R6Abstract/Inc/: R6AbstractClasses.h  R6AbstractPrivate.h
src/R6Abstract/Src/: R6Abstract.cpp  R6Abstract.def  R6AbstractHUD.cpp  (+13 more)
src/R6Engine/: CMakeLists.txt
src/R6Game/: CMakeLists.txt
src/R6GameService/: CMakeLists.txt
src/R6Weapons/: CMakeLists.txt
src/SNDDSound3D/: CMakeLists.txt
src/WinDrv/: CMakeLists.txt
src/Window/: CMakeLists.txt
src/core/: CMakeLists.txt  Core.cpp  CoreStubs.cpp  UnArc.cpp  UnBits.cpp  UnClass.cpp  UnFile.cpp  UnLinker.cpp  UnLog.cpp  UnMath.cpp  UnName.cpp  UnNet.cpp  UnObj.cpp  UnProp.cpp  UnScript.cpp  UnStream.cpp
src/d3ddrv/: CMakeLists.txt  D3DDrv.cpp  D3DDrv.def  D3DDrvPrivate.h  FD3DShaders.h
src/dareaudio/: CMakeLists.txt  DareAudio.def  DareAudioClasses.h  DareAudioPrivate.h
src/engine/: CMakeLists.txt  Core.h  Engine.cpp  Engine.def  Engine.h  Engine.i  EngineBatchImpl.cpp  EngineBatchImpl2.cpp  EngineBatchImpl3.cpp  EngineBatchImpl4.cpp  EngineClasses.h  EngineDecls.h  EngineEvents.cpp  EngineExtra.cpp  EngineNames.h  EnginePrivate.h  EngineStubs1.cpp  EngineStubs2.cpp  EngineStubs3.cpp  EngineStubs4.cpp  EngineVirtuals.cpp  UnActor.cpp  UnAudio.cpp  UnEffects.cpp  UnLevel.cpp  UnMaterial.cpp  UnMesh.cpp  UnModel.cpp  UnNet.cpp  UnPawn.cpp  UnPrim.h  UnRender.cpp
src/fire/: CMakeLists.txt  Fire.cpp  FirePrivate.h
src/ipdrv/: CMakeLists.txt  IpDrv.cpp  IpDrv.def  IpDrvClasses.h  IpDrvPrivate.h
src/launch/: CMakeLists.txt  FMallocWindows.h  Launch.cpp  LaunchPrivate.h
src/r6abstract/: CMakeLists.txt  R6Abstract.cpp  R6AbstractClasses.h  R6AbstractPrivate.h
src/r6engine/: CMakeLists.txt  R6Engine.cpp  R6Engine.def  R6EngineClasses.h  R6EnginePrivate.h
src/r6game/: CMakeLists.txt  R6Game.cpp  R6Game.def
src/r6gameservice/: CMakeLists.txt  R6GameService.cpp  R6GameService.def
src/r6weapons/: CMakeLists.txt  R6Weapons.cpp  R6Weapons.def  R6WeaponsClasses.h  R6WeaponsPrivate.h
src/sndext/: CMakeLists.txt
src/window/: CMakeLists.txt  Window.cpp  Window.def  WindowClasses.h  WindowPrivate.h
src/windrv/: CMakeLists.txt  WinDrv.cpp  WinDrvClasses.h  WinDrvPrivate.h
(+2629 files in other folders)
